syntax = "proto3";

package metricsgrpc;

import "google/protobuf/timestamp.proto";

option go_package = "/metrics";

service metrics {
  rpc Push(PushRequest) returns (PushResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc PushBatch(PushBatchRequest) returns (PushBatchResponse) {}
  rpc GetBatch(GetBatchRequest) returns (GetBatchResponse) {}
}

message metric {
  string name = 1;
  bytes value = 2;
  google.protobuf.Timestamp localtime = 3;
  string source_from_systems = 4;
  string relation_ci = 5;
}

message PushRequest { metric item = 1; }

message PushResponse { string code = 1; }

message GetRequest { string id = 1; }

message GetResponse {
  string code = 1;
  metric item = 2;
}

message PushBatchRequest { repeated metric item = 1; }

message PushBatchResponse { string code = 1; }

message GetBatchRequest { repeated metric item = 1; }

message GetBatchResponse {
  string code = 1;
  repeated metric item = 2;
}
